2015-04-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/compress.c (HuffmanEncode2Image): Fix Coverity 55839
	"Resource leak".
	(HuffmanDecodeImage): Fix Coverity 55859 "Resource leak".

	* magick/color.c (GetColorHistogram): Fix Coverity 55845 "Resource
	leak".
	(ComputeCubeInfo): Fix Coverity 55857 "Resource leak".

	* coders/yuv.c (ReadYUVImage): Fix Coverity 55890 "Resource leak".

	* coders/wpg.c (UnpackWPG2Raster): Fix Coverity 55832 and 55848
	"Resource leak".

2015-04-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/vid.c (ReadVIDImage): Fix Coverity 55868 "Resource leak"
	(ReadVIDImage): Fix Coverity 55874 "Resource leak".

	* coders/txt.c (ReadTXTImage): Fix Coverity 55866 "Resource leak".

	* coders/topol.c (ReadTOPOLImage): Fix Coverity 55865 "Resource
	leak".

	* coders/sgi.c (WriteSGIImage): Fix Coverity 55891 "Resource leak".

	* coders/psd.c (ReadPSDImage): Fix Coverity 55855 "Resource leak".

	* coders/pict.c (WritePICTImage): Fix Coverity 55867, 55875, 55883
	"Resource leak".  Fix Coverity 55892 "Resource leak".

	* coders/pdb.c (ReadPDBImage): Fix Coverity 55840, 55856, and
	55885 "Resource leak".

	* coders/pcx.c (WritePCXImage): Fix Coverity 55877 "Resource
	leak".

	* coders/mvg.c (ReadMVGImage): Fix Coverity 55873 "Resource leak".

	* coders/mpeg.c (WriteMPEGImage): Fix Coverity 55880 "Resource
	leak".

	* coders/miff.c (WriteMIFFImage): Fix Coverity 55864 "Resource
	leak".
	(WriteMIFFImage): Fix Coverity 55872 "Resource leak".

	* coders/meta.c (formatIPTCfromBuffer): Fix Coverity 55838
	"Resource leak".
	(format8BIM): Fix Coverity 55842 and 55852 "Resource leak".
	(formatIPTC): Fix Coverity 5882 "Resource leak".

	* coders/mat.c (ReadMATImage): Fix Coverity 55850 "Resource leak".

	* coders/map.c (ReadMAPImage): Fix Coverity 55876 "Resource leak".

	* coders/logo.c (ReadLOGOImage): Fix Coverity 55870 "Resource
	leak".

	* coders/label.c (ReadLABELImage): Fix Coverity 55869 "Resource
	leak".
